# ternary_linear_logic

./: Makefile  README.md  dune  dune-project  shell.nix  ternary-linear-logic.opam
lib/term/: aliases.ml  dune  index.ml  lambdaCalculus.ml  linearLogic.ml  object.ml  piCalculus.ml  ternary.ml
lib/term/linearLogic/: atom.ml
scripts/: build  macro01.sh  random.awk  repl  run  subdirs.sh
